<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Multi-threadedDownload</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="close">关闭</string>
    <string name="action_grid_element">Sgrid_element</string>
    <string name="capion_text">没有检测到网络，你确认是在地球上吗！ </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="network_error">网络未连接，请检查网络</string>
    <string-array name="interpolators">
        <item>FastOutLinearInInterpolator</item>
        <item>FastOutSlowInInterpolator</item>
        <item>LinearOutSlowInInterpolator</item>
        <item>----------</item>
        <item>AccelerateDecelerateInterpolator</item>
        <item>AccelerateInterpolator</item>
        <item>AnticipateInterpolator</item>
        <item>AnticipateOvershootInterpolator</item>
        <item>BounceInterpolator</item>
        <item>DecelerateInterpolator</item>
        <item>LinearInterpolator</item>
        <item>OvershootInterpolator</item>
    </string-array>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="application_name">AudioDemo</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string-array name="durations">
        <item>100ms</item>
        <item>300ms</item>
        <item>900ms</item>
        <item>1500ms</item>
        <item>3000ms</item>
    </string-array>
    <string name="content">Skate ipsum dolor sit amet, kidney bluntslide powerslide carve. Chicken wing nosepicker Burnside melancholy fastplant. Salad grind 360 sponsored Japan air. Future Primitive mongo bank hospital flip crail slide. Berm frontside Japan air crooked grind. Frontside 360 tuna-flip varial. Rail Grind King skate or die goofy footed sketchy. Slappy lien air hip rails. Japan air Powell Peralta darkslide bearings frigid air.

        Skate ipsum dolor sit amet, baseplate late lipslide 1080 transition fakie out 900. Street slappy coffi</string>
    <string name="skate_ipsum">Skate ipsum dolor sit amet, kidney bluntslide powerslide carve. Chicken wing nosepicker Burnside melancholy fastplant. Salad grind 360 sponsored Japan air. Future Primitive mongo bank hospital flip crail slide. Berm frontside Japan air crooked grind. Frontside 360 tuna-flip varial. Rail Grind King skate or die goofy footed sketchy. Slappy lien air hip rails. Japan air Powell Peralta darkslide bearings frigid air.

        Skate ipsum dolor sit amet, baseplate late lipslide 1080 transition fakie out 900. Street slappy coffin concave skate key dude opposite footed. Baseplate skate or die bearings chicken wing coper gnarly ho-ho. Boned out g-turn vert Brooklyn Banks nose blunt half-flip heel flip chicken wing. Ledge smith grind nose blunt lip flail trucks hard flip. Jason Lee transition berm hanger rail slide smith grind shinner nosepicker. Nollie tail bigspin fakie out rad aerial Z-Roller soul skate. Blunt ollie hole g-turn rocket air bruised heel nose-bump cab flip. Blunt hospital flip g-turn Tracker nose slide bruised heel flypaper. Sick shoveit poseur tuna-flip launch ramp air Kris Markovich hanger. Egg plant downhill snake concave sponsored frigid air coper. Nose grab nose bump concave hurricane transfer Jason Dill tailslide betty. Stalefish Alien Workshop flypaper mini ramp mute-air quarter pipe concave no comply.

Wall ride kickflip g-turn 720 opposite footed. Death box rad judo air frontside air skate or die. Lip bearings deck melancholy kidney. Mute-air boneless dude gnarly egg plant. Nose-bump Gator Mark Anthony full pipe carve snake vert. Baseplate mongo aerial tic-tac betty. Frigid air rail transfer rock and roll rocket air. Gnarly handplant aerial Paul Rodriguez flail slappy. Nosebone slap maxwell quarter pipe grab nollie. Eight Dayz spine late Tracker heel flip switch. Colin McKay late drop in rad method air casper slide. Jeff Phillips poseur nose blunt invert rip grip carve. Locals fastplant alley oop flypaper Kevin Harris.

Goofy footed rails chicken wing pivot ollie north nose blunt. Slap maxwell axle set nose grab manual ledge 720 Fiesta Mall. Drop in Santa Cruz airwalk speed wobbles Primo slide baseplate half-cab. Transition air frontside air blunt indy grab rail slide. Hospital flip Saran Wrap carve 360 boned out hang up Rector. Nose bump wax sick pressure flip Saran Wrap nose blunt. Boned out hang-up air coffin Transworld Kevin Harris downhill. Airwalk invert soul skate powerslide Kevin Harris Mike Vallely coffin. Erik Foss nosebone acid drop slob air manual hang ten switch. Christ air coping crailtap disaster air trucks.

270 steps slam salad grind risers no comply boned out. 540 regular footed Saran Wrap nosepicker Mike Carroll impossible betty late. Kick-nose hurricane durometer rocket air late John Lucero Saran Wrap slap maxwell. Pool Blue Tile Lounge rocket air feeble air transition fakie out tic-tac. Skater spine grab pivot Ray Barbee full-cab nollie powerslide. Chicken wing 360 fastplant blunt regular footed roll-in Bam Margera 50-50. Bruised heel nose grab Agent Orange tailslide Kevin Harris wheels bank bone air. Boardslide feeble noseblunt slide bank lien air no comply casper. Hugh Bod Boyle pogo 270 frontside air speed wobbles body varial backside full-cab. Ledge backside Bare Cover slap maxwell nose grab durometer Saran Wrap noseblunt slide. Regular footed stoked alley oop snake kick-nose Christ air Ron Chapman indy grab. Crail grab tuna-flip rocket air Jordan Richter griptape dude fakie coffin.

Varial deck switch 1080 bail betty cab flip. Transfer wall ride Guy Mariano bearings hanger slam slob air nose blunt. Slam noseblunt slide goofy footed boneless half-flip Dylan Rieder masonite bank. Shoveit kingpin camel back boardslide boned out Tracker nose. Indy grab hardware 540 stoked bruised heel stalefish Transworld ollie north. Coping quarter pipe egg plant McTwist stalefish wall ride Christ air nose blunt. Hang ten nosegrind bail ollie north pump pressure flip wall ride. Drop in full pipe baseplate no comply nosegrind death box sponsored. Griptape poseur drop in aerial slappy sketchy coffin. Nollie deck full-cab bone air birdie fast plant frigid air. Air pop shove-it steps 900 indy grab roll-in shinner.
    </string>
    <string name="ximalaya_slogan">随时随地 听我想听</string>
    <string name="ximalaya">喜马拉雅</string>
    <string name="pre_sound">上一首</string>
    <string name="start_play">开始播放</string>
    <string name="next_sound">下一首</string>
</resources>